# tracerr

./: .clang-format  .gitignore  CMakeLists.txt  CMakeLists.txt.in  README.md  pyproject.toml  setup.py
include/: stb_image.h  stb_image_write.h
proto/: CMakeLists.txt  scene.pb.cc  scene.pb.h  scene.proto
scenes/: CornellBox.textproto  Suzanne.textproto  simple.textproto  simple_spheres.textproto  simple_spheres_with_duck.textproto  sphere_field.textproto  sphere_field_with_duck.textproto
src/: Cube.cpp  Cube.h  File.cpp  File.h  Image.cpp  Image.h  ImageFile.h  Light.h  Material.h  ObjLoader.cpp  ObjLoader.h  Rectangle.cpp  Rectangle.h  Render.cpp  Render.h  SceneManager.cpp  SceneManager.h  Shape.cpp  Shape.h  Sphere.cpp  Sphere.h  ThreadPool.h  Triangle.cpp  Triangle.h  main.cpp  main_py.cpp  tests.cpp
tests/: tests.cpp
